# lerobot-teleoperator-pico4-hand

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
lerobot_teleoperator_pico4_hand/: __init__.py  _lerobot_compat.py  config_pico4_hand.py  pico4_hand.py  pico4_hand_retargeting_worker.py  utils.py
lerobot_teleoperator_pico4_hand/scripts/: __init__.py  record_pico4_hand.py  teleoperate_pico4_hand.py
tests/: test_plugin.py
